--- a/HW3/package.json
+++ b/HW3/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "mongoose": "^5.5.2",
     "pug": "^2.0.3",
     "request": "^2.88.0"
   }
